k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-crud
  namespace: flask-crud
spec:
  selector:
    app: flask-crud
    role: web
  ports:
    - name: http
      port: 80
      targetPort: gunicorn
