k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flask-crud
  namespace: flask-crud
spec:
  rules:
    - host: flask-crud.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: flask-crud
              servicePort: http
